[package]
name = "bittorrent-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.15"
hex = "0.4.3"
sha1 = "0.10.6"
reqwest = { version = "0.12.12", features = ["blocking"] }
urlencoding = "2.1.3"
rand = "0.8.5"
